registerAndLogin API
