# app/Http/Requests/API/UserValidateRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests\API;
+
+use Illuminate\Foundation\Http\FormRequest;
+use App\Traits\API\FailedValidateTrait;
+
+class UserValidateRequest extends FormRequest
+{
+    use FailedValidateTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'phone_number' => 'required',
+        ];
+    }
+}
